Fix: btn-warning contrast ratio

--- a/app/assets/stylesheets/hera/modules/_buttons.scss
+++ b/app/assets/stylesheets/hera/modules/_buttons.scss
@@ -217,6 +217,12 @@
 
   &.btn-warning {
     @include button($yellow);
+    color: $black;
+
+    &:hover,
+    &:not(:disabled):not(.disabled):active {
+      color: $black;
+    }
   }
 
   &.btn-xs {
